--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+	<div id="about">
+	<a href="https://github.com/lukeberglund/Robots-CRUD-App">Data-Viz Git Repository</a>
+	</div>
+    <p>Welcomee to <%= title %></p>
   </body>
 </html>
