--- a/views/robots/show.ejs
+++ b/views/robots/show.ejs
@@ -6,9 +6,8 @@
   </head>
   <body>
     <h1><%= title %></h1>
-	<div id="about">
-	<a href="https://github.com/lukeberglund/Robots-CRUD-App">Robots CRUD App Git Repository</a>
-	</div>
-    <p>Welcomee to <%= title %></p>
+
+    <p><%= robot.name %> - <%= robot.description %></p>
+
   </body>
 </html>
