--- a/views/robots/index.ejs
+++ b/views/robots/index.ejs
@@ -6,9 +6,12 @@
   </head>
   <body>
     <h1><%= title %></h1>
-	<div id="about">
-	<a href="https://github.com/lukeberglund/Robots-CRUD-App">Robots CRUD App Git Repository</a>
-	</div>
-    <p>Welcomee to <%= title %></p>
+
+    <ul>
+      <% robots.forEach(function(robot){ %>
+        <li><%= robot._id %> - <%= robot.name %> - <%= robot.description %></li>
+      <% }); %>
+    </ul>
+
   </body>
 </html>
