--- a/views/robots/show.ejs
+++ b/views/robots/show.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1><%= title %></h1>
 
-    <p><%= robot.name %> - <%= robot.description %></p>
+    <p><%= robot.name %> ---- <%= robot.description %></p>
 
   </body>
 </html>
