--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,10 @@
     <h1><%= title %></h1>
 	<div id="about">
 	<a class="btn btn-primary btn-lg" type="button" href="/robots">List Robots</a>
-	<a href="https://github.com/lukeberglund/Robots-CRUD-App">Robots CRUD App Git Repository</a>
 	</div>
     <p>Welcomee to <%= title %></p>
   </body>
+  <footer>
+	<a href="https://github.com/lukeberglund/Robots-CRUD-App">Robots CRUD App Git Repository</a>
+  </footer>
 </html>
