--- a/views/robots/index.ejs
+++ b/views/robots/index.ejs
@@ -6,8 +6,10 @@
   </head>
   <body>
     <h1><%= title %></h1>
-
-    <ul>
+	<div align="left">
+	<a href="robots/new" class="btn btn-primary btn-sm" ><span class="glyphicon glyphicon-plus"></span></span>New Robot</a>
+    </div>
+	<ul>
       <% robots.forEach(function(robot){ %>
         <li><%= robot._id %> - <%= robot.name %> - <%= robot.description %></li>
       <% }); %>
