--- a/views/robots/new.ejs
+++ b/views/robots/new.ejs
@@ -6,6 +6,31 @@
   </head>
   <body>
     <h1><%= title %></h1>
-	<div class="go-back">
-	<a href="/robots" class="btn btn-info btn-md" ><span class="glyphicon glyphicon-circle-arrow-left"></span>Back</a>
-	</div>
+
+    <a href="/robots"><%= "<< back" %></a>
+
+    <form id="new-robot-form" action="https://southernct-443-robots-api.herokuapp.com/api/robots" method="POST">
+      <label for="name">Name</label>
+      <input id="name" name="name" type="text" placeholder="My Robot">
+      <br>
+
+      <label for="description">Description</label>
+      <textarea id="description" name="description" rows="10" placeholder="Does all the things..."></textarea>
+      <br>
+
+      <label for="in-stock">Units in-stock</label>
+      <input id="in-stock" name="in_stock" type="number" placeholder="0">
+      <br>
+
+      <button id="submit" type="submit">Submit</button>
+    </form>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script><!-- ONLY NECESSARY IF YOU'RE SENDING REQUESTS VIA jQUERY -->
+    <script src="https://d3js.org/d3.v4.min.js"></script><!-- ONLY NECESSARY IF YOU'RE SENDING REQUESTS VIA D3 -->
+    <script type="text/javascript">
+
+      // TODO: ADD JAVASCRIPT HERE TO SEND DATA TO THE WEB SERVICE WHEN THE FORM SUBMIT BUTTON IS PRESSED
+
+    </script>
+  </body>
+</html>
