--- a/views/robots/index.ejs
+++ b/views/robots/index.ejs
@@ -7,7 +7,9 @@
   <body>
     <h1><%= title %></h1>
 	<div align="left">
-	<a href="robots/new" class="btn btn-primary btn-sm" ><span class="glyphicon glyphicon-plus"></span></span>New Robot</a>
+	<a href="/robots/new">
+  <button>+ New Robot</button>
+</a>
     </div>
 	<ul>
       <% robots.forEach(function(robot){ %>
