--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 	<div id="about">
 	<a class="btn btn-primary btn-lg" type="button" href="/robots">List Robots</a>
 	</div>
-    <p>Welcomee to <%= title %></p>
+    <p>Welcome to <%= title %></p>
   </body>
   <footer>
 	<a href="https://github.com/lukeberglund/Robots-CRUD-App">Robots CRUD App Git Repository</a>
