--- a/views/robots/show.ejs
+++ b/views/robots/show.ejs
@@ -11,6 +11,8 @@
     <p><%= robot.name %> - <%= robot.description %></p>
 	<p>In Stock: <%= robot.in_stock %> </p>
 	
+	<div><a href="/" class="btn btn-success btn-sm"></a></div>
+	
 	<div class="table-responsive">
        <table class="table table-bordered table-hover">
 
@@ -19,14 +21,6 @@
              <th>Id</th>
              <th>Name</th>
              <th>Description</th>
-             <th>Created At</th>
-
-             <th>
-            <a href="/" class="btn btn-success btn-sm">
-           <span class="glyphicon glyphicon-refresh"></span></span>Refresh
-         </a>
-            </th>
-
            </tr>
          </thead>
 
