--- a/views/robots/index.ejs
+++ b/views/robots/index.ejs
@@ -31,7 +31,7 @@
 	  <td><a href="/robots/<%= robot._id %>"><%= robot._id %></a></td>
 	  <td><%= robot.name %></td>
 	  <td><%= robot.description %></td>
-      <td><a href="/robots/<%= robot.name %>/edit"><button class="btn btn-warning btn-sm">
+      <td><a href="/robots/<%= robot._id %>/edit"><button class="btn btn-warning btn-sm">
       <span class="glyphicon glyphicon-pencil"></span>Edit
       </button></a></td>
       <td>
